modificaciones de estilo

--- a/ProBlog/src/Blogger/BlogBundle/Resources/config/services.yml
+++ b/ProBlog/src/Blogger/BlogBundle/Resources/config/services.yml
@@ -8,3 +8,9 @@ services:
 
   Blogger\BlogBundle\DataFixtures\ORM\CommentFixtures:
     tags: [doctrine.fixture.orm]
+
+services:
+    blogger_blog.twig.extension:
+        class: Blogger\BlogBundle\Twig\Extensions\BloggerBlogExtension
+        tags:
+               - { name: twig.extension }
